@@ -3,7 +3,7 @@ Section: web
 Priority: optional
 Maintainer: Debian QA Group <packages@qa.debian.org>
 Standards-Version: 3.7.3
-Build-Depends: debhelper (>= 5.0), texinfo, bison, flex, texi2html, texlive-base-bin, po-debconf, quilt
+Build-Depends: debhelper (>= 5.0), texinfo, bison, flex, texi2html, texlive-base-bin, po-debconf
 
 Package: boa
 Architecture: any
