@@ -13,18 +13,7 @@
 
 package=boa
 
-patch: patch-stamp
-patch-stamp:
-	dh_testdir
-	$(MAKE) -f /usr/share/quilt/quilt.make patch
-	touch patch-stamp
-
-unpatch:
-	dh_testdir
-	$(MAKE) -f /usr/share/quilt/quilt.make unpatch
-
-build: patch-stamp build-stamp 
-
+build: build-stamp
 build-stamp: 
 	dh_testdir
 	./configure
@@ -32,7 +21,7 @@ build-stamp:
 	cd docs;make boa.html boa.info
 	touch build-stamp
 
-clean: unpatch
+clean:
 	dh_testdir
 
 	rm -f *-stamp
