@@ -2,6 +2,8 @@ boa (0.94.14rc21-4) UNRELEASED; urgency=low
 
   * QA upload
   * Set maintainer to Debian QA Group
+  * Switch to source format "3.0 (quilt)"
+    + Drop quilt traces from debian/rules and build-dependency on quilt
 
  -- Axel Beckert <abe@debian.org>  Sun, 16 Jun 2013 02:21:37 +0200
 
